--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -1,20 +1,26 @@
 name: Workflow Demo
-
 on: [push]
-
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
     - name: Create a text file
       run: echo "Hello, world!" > hello.txt
-
     - name: Archive text file
       uses: actions/upload-artifact@v4
       with:
         name: hello-artifact
         path: hello.txt
+  download:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: hello-artifact
+        path: ./artifacts
+    - name: display the content
+      run: cat ./artifacts/hello.txt
