--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Download artifact
+    - name: Download artifact new
       uses: actions/download-artifact@v4
       with:
         name: hello-artifact
